fixing alignment for laptop screens on the homepage

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -29,4 +29,8 @@
   position: absolute;
   top: 10px;
   right: 10px;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
